[package]
name = "simple_store"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"

